<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/count"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:onClick="DisplayCount"
        android:text="@string/Count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/history"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:onClick="DisplayHistory"
        android:text="@string/History"
        app:layout_constraintEnd_toStartOf="@+id/count"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="183dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="HELLO, HOW ARE YOU TODAY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sadness"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:onClick="Sadness"
        android:text="@string/sadness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/banger"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="Anger"
        android:text="@string/anger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/surprise"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:onClick="Surprise"
        android:text="@string/surprise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/love"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:onClick="Love"
        android:text="@string/love"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/joy"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:onClick="Joy"
        android:text="@string/joy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fear"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="Fear"
        android:text="@string/fear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/CommentInput"
        android:layout_width="379dp"
        android:layout_height="148dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="text|textMultiLine|textCapSentences"
        android:maxLength="100"

        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count" />

</android.support.constraint.ConstraintLayout>